secondfile/objects/RDS_Validation__c.object
<CustomObject>
    <fields>
        <fullName>Port_Speed_BEID__c</fullName>
        <label>Port Speed BEID</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Port_Speed__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>17995</fullName>
                </value>
                <value>
                    <fullName>17999</fullName>
                </value>
                <value>
                    <fullName>18007</fullName>
                </value>
                <value>
                    <fullName>18010</fullName>
                </value>
                <value>
                    <fullName>18014</fullName>
                </value>
                <value>
                    <fullName>20410</fullName>
                </value>
                <value>
                    <fullName>18019</fullName>
                </value>
                <value>
                    <fullName>18020</fullName>
                </value>
                <value>
                    <fullName>18025</fullName>
                </value>
                <value>
                    <fullName>8506</fullName>
                </value>
                <value>
                    <fullName>8511</fullName>
                </value>
                <value>
                    <fullName>8513</fullName>
                </value>
                <value>
                    <fullName>8519</fullName>
                </value>
                <value>
                    <fullName>8345</fullName>
                </value>
                <value>
                    <fullName>8350</fullName>
                </value>
                <value>
                    <fullName>8355</fullName>
                </value>
                <value>
                    <fullName>8357</fullName>
                </value>
                <value>
                    <fullName>8362</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_Speed_Name__c</fullName>
        <label>Port Speed Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Port_Speed__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>MLPS Port-5 MBPS</fullName>
                </value>
                <value>
                    <fullName>MLPS Port-10 MBPS</fullName>
                </value>
                <value>
                    <fullName>MLPS Port-20 MBPS</fullName>
                </value>
                <value>
                    <fullName>MLPS Port-50 MBPS</fullName>
                </value>
                <value>
                    <fullName>MLPS Port-100 MBPS</fullName>
                </value>
                <value>
                    <fullName>MLPS Port-250 MBPS</fullName>
                </value>
                <value>
                    <fullName>MLPS Port-500 MBPS</fullName>
                </value>
                <value>
                    <fullName>MLPS Port-600 MBPS</fullName>
                </value>
                <value>
                    <fullName>MLPS Port-1G</fullName>
                </value>
                <value>
                    <fullName>5 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
                <value>
                    <fullName>10 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
                <value>
                    <fullName>20 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
                <value>
                    <fullName>50 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
                <value>
                    <fullName>100 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
                <value>
                    <fullName>250 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
                <value>
                    <fullName>500 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
                <value>
                    <fullName>600 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
                <value>
                    <fullName>1000 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_Speed__c</fullName>
        <label>Port Speed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Type_Technical__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>1000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premise_Friendly_Name__c</fullName>
        <formula>Premise__r.Premise_Friendly_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premise Friendly Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_ID__c</fullName>
        <label>Premise ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Number__c</fullName>
        <description>Technical field to capture Premise Number. Not required on page layout.</description>
        <formula>Premise__r.Premise_Number__c</formula>
        <label>Premise Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RDS-Premise Details</label>
        <referenceTo>RDS_Premise_Details__c</referenceTo>
        <relationshipName>RDS_Validation_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuoteName__c</fullName>
        <formula>RelatedQuote__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedQuote</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>RDS-Validation</relationshipLabel>
        <relationshipName>RDS_Validation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Quote_Name__c</fullName>
        <label>Related Quote Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_quote__c</fullName>
        <label>Related quote</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Type_Technical__c</fullName>
        <label>Service Type Technical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MIS</fullName>
                </value>
                <value>
                    <fullName>AVPN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <formula>Premise__r.Premise_Friendly_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Active</fullName>
                    <default>true</default>
                    <label>Not Active</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subnet_Mask__c</fullName>
        <label>Subnet Mask v4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transport_Type__c</fullName>
        <formula>Premise__r.Transport_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transport Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UBB_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UBB Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UBB__c</fullName>
        <label>UBB</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unilink__c</fullName>
        <label>Unilink</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLANID__c</fullName>
        <label>VLANID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_Name__c</fullName>
        <formula>Premise__r.VLAN_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VLAN Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_Speed_Roll_up__c</fullName>
        <label>VLAN Speed Roll up</label>
        <summarizedField>RDS_Validation_Configuration__c.VLAN_Speed_Roll_up__c</summarizedField>
        <summaryForeignKey>RDS_Validation_Configuration__c.RDS_Validation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VLAN_Speed_for_VLAN_Add__c</fullName>
        <label>VLAN Speed for VLAN Add</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPN_Name__c</fullName>
        <label>VPN Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Account_Id__c</fullName>
        <formula>Premise__r.DealHash__r.Opportunity__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vlan_Speed_Total__c</fullName>
        <label>Vlan Speed Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Action_List__c</fullName>
        <label>Work Action List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isbackend__c</fullName>
        <formula>RelatedQuote__r.MACD_Change_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isbackend</label>
        <type>Text</type>
    </fields>
    <label>RDS-Validation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VAL-{0000}</displayFormat>
        <label>RDS-Validation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-Validation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>